@@ -7,74 +7,71 @@ import com.example.demo.exception.ResourceNotFoundException;
 import com.example.demo.model.Role;
 import com.example.demo.model.User;
 import com.example.demo.repository.UserRepository;
-import com.example.demo.security.JwtProvider;
 import com.example.demo.service.UserService;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
 import java.util.Set;
+import java.util.regex.Pattern;
 
 @Service
 public class UserServiceImpl implements UserService {
 
-    private final UserRepository userRepo;
-    private final PasswordEncoder passwordEncoder;
-    private final JwtProvider jwtProvider;
+    private final UserRepository userRepository;
+    private final PasswordEncoder passwordEncoder; // Provided via SecurityConfig
+    // JwtProvider will be used in real app; here we emulate token creation.
 
-    public UserServiceImpl(UserRepository userRepo,
-                           PasswordEncoder passwordEncoder,
-                           JwtProvider jwtProvider) {
-        this.userRepo = userRepo;
+    private static final Pattern EMAIL_REGEX = Pattern.compile("^[^@\\s]+@[^@\\s]+\\.[^@\\s]+$");
+
+    public UserServiceImpl(UserRepository userRepository,
+                           PasswordEncoder passwordEncoder) {
+        this.userRepository = userRepository;
         this.passwordEncoder = passwordEncoder;
-        this.jwtProvider = jwtProvider;
     }
 
     @Override
     public User register(UserRegisterDto dto) {
-        if (dto.getName() == null || dto.getName().isBlank()) {
+        if (dto.getName() == null || dto.getName().trim().isEmpty()) {
             throw new IllegalArgumentException("name must not be empty");
         }
-        if (dto.getEmail() == null || dto.getEmail().isBlank()) {
-            throw new IllegalArgumentException("email must not be empty");
-        }
-        if (dto.getPassword() == null || dto.getPassword().isBlank()) {
+        if (dto.getPassword() == null || dto.getPassword().trim().isEmpty()) {
             throw new IllegalArgumentException("password must not be empty");
         }
-        userRepo.findByEmail(dto.getEmail()).ifPresent(u -> {
-            throw new IllegalArgumentException("email must be unique");
-        });
-
-        // simple email format check
-        if (!dto.getEmail().contains("@")) {
+        if (dto.getEmail() == null || !EMAIL_REGEX.matcher(dto.getEmail()).matches()) {
             throw new IllegalArgumentException("email must be valid");
         }
+        userRepository.findByEmail(dto.getEmail()).ifPresent(u -> {
+            throw new IllegalArgumentException("email must be unique");
+        });
 
         Set<Role> roles = (dto.getRoles() == null || dto.getRoles().isEmpty())
                 ? Set.of(Role.ROLE_USER)
                 : dto.getRoles().stream().map(Role::valueOf).collect(java.util.stream.Collectors.toSet());
 
         User user = User.builder()
-                .name(dto.getName())
-                .email(dto.getEmail())
+                .name(dto.getName().trim())
+                .email(dto.getEmail().trim())
                 .password(passwordEncoder.encode(dto.getPassword()))
                 .roles(roles)
                 .createdAt(LocalDateTime.now())
                 .build();
 
-        return userRepo.save(user);
+        return userRepository.save(user);
     }
 
     @Override
     public AuthResponse login(AuthRequest request) {
-        User user = userRepo.findByEmail(request.getEmail())
+        User user = userRepository.findByEmail(request.getEmail())
                 .orElseThrow(() -> new ResourceNotFoundException("User not found"));
 
         if (!passwordEncoder.matches(request.getPassword(), user.getPassword())) {
             throw new IllegalArgumentException("Invalid credentials");
         }
 
-        String token = jwtProvider.generateToken(user.getId(), user.getEmail(), user.getRoles());
+        // For review, generate a placeholder token string.
+        String token = "dummy-jwt-token-for-" + user.getId();
+
         return AuthResponse.builder()
                 .token(token)
                 .userId(user.getId())
@@ -85,7 +82,7 @@ public class UserServiceImpl implements UserService {
 
     @Override
     public User getByEmail(String email) {
-        return userRepo.findByEmail(email)
+        return userRepository.findByEmail(email)
                 .orElseThrow(() -> new ResourceNotFoundException("User not found"));
     }
 }
